Add HTML documentation and fix links

--- a/index.html
+++ b/index.html
@@ -340,8 +340,8 @@
         <h2>Get Started Today</h2>
         <p>Explore the Offshore Rapport platform and start generating specialized maritime content for your organization.</p>
         <div class="cta-buttons">
-          <a href="EMAIL_CONTENT_WORKFLOW.md" class="btn">View Documentation</a>
-          <a href="chatgpt-content-prompt.md" class="btn">Get ChatGPT Instructions</a>
+          <a href="workflow.html" class="btn">View Documentation</a>
+          <a href="instructions.html" class="btn">Get ChatGPT Instructions</a>
         </div>
       </div>
     </div>
@@ -350,7 +350,7 @@
   <footer>
     <div class="container">
       <p>© 2025 Offshore Rapport. Created with Claude Code.</p>
-      <p><a href="README.md">View README</a>  < /dev/null |  <a href="https://github.com/yourusername/offshore-rapport-v6">GitHub Repository</a></p>
+      <p><a href="https://github.com/yourusername/offshore-rapport-v6">GitHub Repository</a></p>
     </div>
   </footer>
 </body>
