Add offshore economics sample content

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
   <section class="sample-content">
     <div class="container">
       <h2>Sample Generated Content</h2>
-      <div class="sample-card">
+      <div class="sample-card" style="margin-bottom: 30px;">
         <h3>Global Fisheries Sustainability Outlook</h3>
         <div class="sample-meta">
           <span class="sample-category">Fisheries</span>
@@ -330,6 +330,18 @@
           <p>The global fisheries sector continues to navigate a complex landscape of environmental challenges, market dynamics, and technological innovation in Q2 2025. Sustainable management practices have shown measurable success in several key regions...</p>
         </div>
         <a href="sample-content.html" class="btn">View Full Sample</a>
+      </div>
+      
+      <div class="sample-card">
+        <h3>Offshore Economic Activity Report</h3>
+        <div class="sample-meta">
+          <span class="sample-category">Offshore Economics</span>
+          <span class="sample-date">May 15, 2025</span>
+        </div>
+        <div class="sample-excerpt">
+          <p>The offshore energy sector demonstrated resilience in Q2 2025 despite ongoing market volatility, with capital expenditures rising 7.3% year-over-year to reach $112.4 billion globally. This increase reflects the continuing balance of traditional offshore oil and gas activity...</p>
+        </div>
+        <a href="offshore-economics-sample.html" class="btn">View Full Sample</a>
       </div>
     </div>
   </section>
