--- a/sample-content.html
+++ b/sample-content.html
@@ -3,16 +3,53 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sample Content - Offshore Rapport</title>
+  <title>Global Fisheries Sustainability Outlook - Offshore Rapport</title>
   <link rel="stylesheet" href="css/content-styles.css">
   <style>
+    :root {
+      --primary-color: #0e4f6e;
+      --secondary-color: #2a8dbc;
+      --accent-color: #3dbadc;
+      --text-color: #333;
+      --light-color: #f5f9fc;
+      --border-color: #d1e3f0;
+    }
     body {
-      font-family: Arial, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       line-height: 1.6;
-      max-width: 800px;
+      margin: 0;
+      padding: 0;
+      color: var(--text-color);
+      background-color: var(--light-color);
+    }
+    header {
+      background-color: white;
+      border-bottom: 3px solid var(--primary-color);
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    .header-content {
+      max-width: 1200px;
       margin: 0 auto;
       padding: 20px;
-      color: #333;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .logo {
+      font-size: 1.8rem;
+      font-weight: bold;
+      color: var(--primary-color);
+      text-decoration: none;
+    }
+    .main-container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 40px 20px;
+      background-color: white;
+      box-shadow: 0 0 20px rgba(0,0,0,0.05);
     }
     .content-header {
       margin-bottom: 30px;
@@ -21,8 +58,8 @@
     }
     .content-title {
       margin-top: 0;
-      color: #0e4f6e;
-      font-size: 2rem;
+      color: var(--primary-color);
+      font-size: 2.5rem;
     }
     .content-meta {
       display: flex;
@@ -34,56 +71,80 @@
       margin-right: 15px;
     }
     .content-category {
-      text-transform: capitalize;
+      background-color: var(--accent-color);
+      color: white;
+      padding: 4px 12px;
+      border-radius: 15px;
+      font-size: 0.85rem;
       font-weight: bold;
-      color: #2a8dbc;
     }
     .content-body {
       line-height: 1.8;
+      font-size: 1.1rem;
     }
     .content-body h2 {
-      color: #0e4f6e;
+      color: var(--primary-color);
+      margin-top: 40px;
+      font-size: 1.8rem;
+    }
+    .content-body h3 {
+      color: var(--primary-color);
       margin-top: 30px;
+      font-size: 1.4rem;
     }
     .content-body table {
       width: 100%;
       border-collapse: collapse;
-      margin: 20px 0;
+      margin: 30px 0;
     }
     .content-body th, .content-body td {
-      border: 1px solid #ddd;
-      padding: 8px 12px;
+      border: 1px solid var(--border-color);
+      padding: 12px 15px;
       text-align: left;
     }
     .content-body th {
-      background-color: #f5f9fc;
+      background-color: var(--light-color);
+      font-weight: 600;
     }
     .content-body blockquote {
-      border-left: 4px solid #2a8dbc;
-      margin: 20px 0;
-      padding: 10px 20px;
-      background-color: #f5f9fc;
+      border-left: 4px solid var(--accent-color);
+      margin: 30px 0;
+      padding: 15px 25px;
+      background-color: var(--light-color);
       font-style: italic;
+      font-size: 1.1rem;
     }
     .navigation {
-      margin-top: 40px;
+      margin-top: 60px;
       text-align: center;
-      padding-top: 20px;
+      padding-top: 30px;
       border-top: 1px solid #eee;
     }
     .navigation a {
       display: inline-block;
-      padding: 10px 15px;
-      background-color: #0e4f6e;
+      padding: 12px 25px;
+      background-color: var(--primary-color);
       color: white;
       text-decoration: none;
       border-radius: 4px;
+      font-weight: 600;
+      transition: background-color 0.3s;
+    }
+    .navigation a:hover {
+      background-color: var(--secondary-color);
     }
   </style>
 </head>
 <body>
-  <article class="content">
-    <header class="content-header">
+  <header>
+    <div class="header-content">
+      <a href="index.html" class="logo">Offshore Rapport</a>
+    </div>
+  </header>
+  
+  <div class="main-container">
+    <article class="content">
+      <header class="content-header">
       <h1 class="content-title">Global Fisheries Sustainability Outlook: Q2 2025</h1>
       <div class="content-meta">
         <span class="content-category">Fisheries</span>
@@ -205,8 +266,10 @@
     </div>
   </article>
   
-  <div class="navigation">
-    <a href="index.html">Back to Home</a>
+      <div class="navigation">
+        <a href="index.html">← Back to Home</a>
+      </div>
+    </article>
   </div>
 </body>
 </html>
